--- a/user.yml
+++ b/user.yml
@@ -1,8 +1,9 @@
+
 paths:
   Users:
     parameters:
-      - $ref: 'parameters.yaml#/components/parameters/Version'
-      - $ref: 'parameters.yaml#/components/parameters/OrganizationId'
+      - $ref: 'global.yml#/components/parameters/Version'
+      - $ref: 'global.yml#/components/parameters/OrganizationId'
     post:
       summary: Creates a user
       security:
@@ -27,12 +28,33 @@ paths:
                   data:
                     $ref: '#/components/schemas/User'
         '400':
-          $ref: 'global.yaml#/components/responses/BadRequest'
+          $ref: 'global.yml#/components/responses/BadRequest'
         '403':
-          $ref: 'global.yaml#/components/responses/Forbidden'
-      tags:
-        - Organizations
-
+          $ref: 'global.yml#/components/responses/Forbidden'
+  UserId:
+    parameters:
+      - $ref: 'global.yml#/components/parameters/Version'
+      - $ref: 'global.yml#/components/parameters/OrganizationId'
+      - $ref: '#/components/parameters/UserId'
+    get:
+      summary: Gets a user
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/User'
+        '400':
+          $ref: 'global.yml#/components/responses/BadRequest'
+        '403':
+          $ref: 'global.yml#/components/responses/Forbidden'
+        '404':
+          $ref: 'global.yml#/components/responses/NotFound'
 components:
   schemas:
     User:
@@ -43,3 +65,12 @@ components:
           format: uuid
         name:
           type: string
+  parameters:
+    UserId:
+      in: path
+      name: id
+      required: true
+      schema:
+        type: string
+        format: uuid
+      description: User's ID
